[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jack Will <wujackwill@outlook.com>"]
license = "MIT"
description = "yet another todo CLI app written in Rust"
readme = "README.md"
homepage = "https://github.com/wujackwill/todo"
repository = "https://github.com/wujackwill/todo"
keywords = ["cli"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
